// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sanitiser sanitise global configuration sanitise if no config provided 1`] = `
Object {
  "debug": false,
  "imageSnapshotPath": "differencify_reports",
  "mismatchThreshold": 0.001,
  "puppeteer": Object {
    "args": Array [],
    "dumpio": false,
    "executablePath": undefined,
    "headless": true,
    "ignoreHTTPSErrors": false,
    "slowMo": 0,
    "timeout": 30000,
  },
  "saveDifferencifiedImage": true,
}
`;

exports[`sanitiser sanitise global configuration sanitise if screenshots config provided 1`] = `
Object {
  "debug": false,
  "imageSnapshotPath": "differencify_reports",
  "mismatchThreshold": 0.001,
  "puppeteer": Object {
    "args": Array [],
    "dumpio": false,
    "executablePath": undefined,
    "headless": true,
    "ignoreHTTPSErrors": false,
    "slowMo": 0,
    "timeout": 30000,
  },
  "saveDifferencifiedImage": true,
}
`;

exports[`sanitiser sanitise test configuration sanitise if no config provided 1`] = `
Object {
  "chain": true,
  "isUpdate": false,
  "newWindow": false,
  "testName": "test1",
}
`;

exports[`sanitiser sanitise test configuration sanitise if some config provided 1`] = `
Object {
  "chain": true,
  "isUpdate": false,
  "newWindow": true,
  "testName": "test1",
}
`;
